--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 
+telegram.bot.token=5864019050:AAHSxLvkIIoGPsnGhh1DcNClvKFnpVqlocg
